Make section sizes completely responsive, fix spacing between them

--- a/style.css
+++ b/style.css
@@ -188,7 +188,6 @@ header nav ul {
     justify-content: center;
     align-items: center;
     gap: 5vw;
-    /* position: relative; */
 }
 
 #hero-image {
@@ -224,20 +223,18 @@ header nav ul {
     position: absolute;
     bottom: -30%;
     right: -8%;
-    /* width: 450px; */
     width: 30vw;
     height: auto;
 }
 
 /* ABOUT SECTION */
 #about-section {
-    /* padding: 5vw 5vw 10vw 5vw; */
-    height: calc(100vh - 70px);
-    min-height: 650px;
+    height: min-content;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 2vw;
+    padding: 6vw 0px;
 }
 
 #about-text-container {
@@ -274,18 +271,6 @@ header nav ul {
 #about-text {
     font-size: 1.5vw;
 }
-
-/* #about-image-container {
-    max-width: 35%;
-    height: max-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.7vw;
-    flex-wrap: wrap;
-    min-width: 420px;
-    outline: 1px solid red;
-} */
 
 #about-image-container {
     width: min-content;
@@ -378,8 +363,8 @@ header nav ul {
     position: relative;
     top: 0px;
     left: 0px;
-    height: calc(100vh - 70px);
-    min-height: 650px;
+    height: min-content;
+    padding: 4vw 0px 3vw 0px;
 }
 
 #portfolio-heading {
@@ -399,7 +384,7 @@ header nav ul {
 }
 
 .port-head {
-    margin-left: 11vw;
+    margin-left: 17.5vw;
     width: max-content;
 }
 
